--- a/Create-account.html
+++ b/Create-account.html
@@ -32,7 +32,12 @@
           <div class="flex-content">
           <section class="create-account-section">
             <h2>Producer</h2>
-            <p><div class="check-icon"><i class="far fa-check-circle"></i></div> Upload your work</p>
+            <div class="account-checklist">
+            <div class="check-icon">
+                <i class="far fa-check-circle"></i>
+            </div>
+            <p> Upload your work</p>
+            </div>
             <i class="far fa-check-circle"></i> <p>Profit per view</p>
             <i class="far fa-check-circle"></i> <p>Get your own profile page</p>
             <div class="create-account-button">
