--- a/Create-account.html
+++ b/Create-account.html
@@ -38,8 +38,18 @@
             </div>
             <p> Upload your work</p>
             </div>
-            <i class="far fa-check-circle"></i> <p>Profit per view</p>
-            <i class="far fa-check-circle"></i> <p>Get your own profile page</p>
+            <div class="account-checklist">
+                <div class="check-icon">
+                    <i class="far fa-check-circle"></i>
+                </div>
+                <p>Profit per view</p>
+            </div>
+            <div class="account-checklist">
+                <div class="check-icon">
+                    <i class="far fa-check-circle"></i>
+                </div>
+                <p>Get your own profile page</p>
+            </div>
             <div class="create-account-button">
               <a href="create-account-pro/create-account-pro1.html" class="button1">Make producer account</a>
             </div>
