--- a/Create-account.html
+++ b/Create-account.html
@@ -32,19 +32,19 @@
           <div class="flex-content">
           <section class="create-account-section">
             <h2>Producer</h2>
-            <div class="account-checklist">
+            <div class="create-account-checklist">
             <div class="check-icon">
                 <i class="far fa-check-circle"></i>
             </div>
             <p> Upload your work</p>
             </div>
-            <div class="account-checklist">
+            <div class="create-account-checklist">
                 <div class="check-icon">
                     <i class="far fa-check-circle"></i>
                 </div>
                 <p>Profit per view</p>
             </div>
-            <div class="account-checklist">
+            <div class="create-account-checklist">
                 <div class="check-icon">
                     <i class="far fa-check-circle"></i>
                 </div>
