--- a/Create-account.html
+++ b/Create-account.html
@@ -57,9 +57,23 @@
 
           <section class="create-account-section">
             <h2>Watcher</h2>
-            <i class="far fa-check-circle"></i> <p>Enjoy independent films</p>
-            <i class="far fa-check-circle"></i> <p>Add credit card for easy payment</p>
-            <i class="far fa-check-circle"></i> <p>Get regular newsletters</p>
+            <div class="account-checklist">
+                <div class="check-icon">
+                    <i class="far fa-check-circle"></i>
+                </div>
+                 <p>Enjoy independent films</p>
+            </div>
+            <div class="account-checklist">
+                <div class="check-icon">
+                    <i class="far fa-check-circle"></i>
+                </div><p>Add credit card for easy payment</p>
+            </div>
+            <div class="account-checklist">
+                <div class="check-icon">
+                    <i class="far fa-check-circle"></i>
+                </div>
+                 <p>Get regular newsletters</p>
+            </div>
              <div class="create-account-button">
               <a href="create-account-watcher/create-account-watcher1.html" class="button1">Make watcher account</a>
           </div>
