--- a/Create-account.html
+++ b/Create-account.html
@@ -57,18 +57,18 @@
 
           <section class="create-account-section">
             <h2>Watcher</h2>
-            <div class="account-checklist">
-                <div class="check-icon">
+                <div class="create-account-checklist">
+                 <div class="check-icon">
                     <i class="far fa-check-circle"></i>
                 </div>
                  <p>Enjoy independent films</p>
             </div>
-            <div class="account-checklist">
+            <div class="create-account-checklist">
                 <div class="check-icon">
                     <i class="far fa-check-circle"></i>
                 </div><p>Add credit card for easy payment</p>
             </div>
-            <div class="account-checklist">
+            <div class="create-account-checklist">
                 <div class="check-icon">
                     <i class="far fa-check-circle"></i>
                 </div>
