--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -26,7 +26,7 @@
       <main>
      <form action="submit.php" method="GET">
         <fieldset>
-            <legend>Personal information</legend>
+            <h1>Personal information</h1>
             <label for="fullname">FULL NAME</label>
             <input type="text" name="fullname" class="form__input" required>
             <label for="e-mail">E-MAIL</label>
@@ -37,9 +37,8 @@
             <input type="text" name="password" class="form__input"required>
             <input type="checkbox" name="newsletter" value="newsletter" id="newsletter"><label for="newsletter">Send newsletters to my e-mail address</label>
         </fieldset>
-        <button type="submit"><i class="fas fa-arrow-circle-right" style="color: #E6B33E; font-size: 2px;"></i></button>
+        <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
      </form>
-    <a href="../create-account-pro/create-account-pro2.html">next</a>
     
     </body>
     </main>
