--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -26,14 +26,14 @@
       <main>
      <form action="submit.php" method="GET">
         <fieldset>
-            <h1>Personal information</h1>
-            <label for="fullname">FULL NAME</label>
+            <h1 class="h1-form">Personal information</h1>
+            <label for="fullname">Full name</label>
             <input type="text" name="fullname" class="form__input" required>
-            <label for="e-mail">E-MAIL</label>
+            <label for="e-mail">E-mail</label>
             <input type="text" name="e-mail" class="form__input" required>
-            <label for="birthdate">BIRTH DATE</label>
+            <label for="birthdate">Birth date</label>
             <input type="text" name="birthdate" class="form__input"required>
-            <label for="password">CHOOSE YOUR PASSWORD</label>
+            <label for="password">Choose your password</label>
             <input type="text" name="password" class="form__input"required>
             <input type="checkbox" name="newsletter" value="newsletter" id="newsletter"><label for="newsletter">Send newsletters to my e-mail address</label>
         </fieldset>
