--- a/Create-account-watcher/create-account-watcher2.html
+++ b/Create-account-watcher/create-account-watcher2.html
@@ -25,24 +25,23 @@
 
     <main>
         <form action="submit.php" method="GET">
-        <fieldset>
-            <legend>Register your credit card</legend>
+        <fieldset class="credit card">
+            <h1 class="h1-form">Register your credit card</h1>
             <p>* This step is optional. By adding this information you do not have to type your credit card information everytime you are going to watch a film.</p>
-
-            <label for="fullname">FULL NAME</label>
+            <label for="fullname">Full name</label>
             <input type="text" name="fullname" class="form__input">
-            <label for="adress">ADDRESS</label>
+            <label for="adress">Address</label>
             <input type="text" name="address" class="form__input">
-            <label for="city">CITY</label><label for="zipcode">ZIP CODE</label>
+            <label for="city">City</label><label for="zipcode">Zip code</label>
             <input type="text" name="city"><input type="text" name="zipcode" class="form__input">
-            <label for="country">COUNTRY</label>
+            <label for="country">Country</label>
             <input type="text" name="country" class="form__input">
 
-            <label for="cardnumber">CARDNUMBER</label>
+            <label for="cardnumber">Cardnumber</label>
             <input type="text" name="cardnumber" class="form__input">
-            <label for="cardholdername">CARDHOLDER NAME</label>
+            <label for="cardholdername">Cardholder name</label>
             <input type="text" name="cardholdername" class="form__input">
-            <label for="expiredate">EXPIRE DATE</label>
+            <label for="expiredate">Expire date</label>
             <input type="text" name="expiredate" class="form__input">
             <label for="cvv">CVV</label>
             <input type="text" name="cvv" class="form__input">
