--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -25,7 +25,7 @@
 
       <main>
      <form action="submit.php" method="GET">
-        <fieldset>
+        <fieldset class="personal-information">
             <h1 class="h1-form">Personal information</h1>
             <label for="fullname">Full name</label>
             <input type="text" name="fullname" class="form__input" required>
