--- a/Create-account-pro/create-account-pro3.html
+++ b/Create-account-pro/create-account-pro3.html
@@ -25,20 +25,20 @@
 
     <main>
         <form action="submit.php" method="GET">
-        <fieldset>
-            <legend>Register your credit card</legend>
+        <fieldset class="credit-card">
+            <h1 class="h1-form">Register your credit card</h1>
             <p>*Optional - If your interested in watching other producers' films, you can add your creditcard infomation for easy payment.</p>
-            <label for="cardnumber">CARDNUMBER</label>
+            <label for="cardnumber">Cardnumber</label>
             <input type="text" name="cardnumber" class="form__input">
-            <label for="cardholdername">CARDHOLDER NAME</label>
+            <label for="cardholdername">Cardholder name</label>
             <input type="text" name="cardholdername" class="form__input">
-            <label for="expiredate">EXPIRE DATE</label>
+            <label for="expiredate">Expire date</label>
             <input type="text" name="expiredate" class="form__input">
             <label for="cvv">CVV</label>
             <input type="text" name="cvv" class="form__input">
          </fieldset>
          <input type="submit" value="next">
-         <a href="../create-account-pro/create-account-pro4.html">Next</a>
+         <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
          </form>
     </body>
     </main>
