--- a/Create-account-watcher/create-account-watcher1.html
+++ b/Create-account-watcher/create-account-watcher1.html
@@ -25,15 +25,15 @@
 
     <main>
         <form action="submit.php" method="GET">
-            <fieldset>
-                <legend>Personal information</legend>
-                <label for="fullname">FULL NAME</label>
+            <fieldset class="personal-information">
+                <h1 class="h1-form">Personal information</h1>
+                <label for="fullname">Full name</label>
                 <input type="text" name="fullname" class="form__input" required>
-                <label for="e-mail">E-MAIL</label>
+                <label for="e-mail">E-mail</label>
                 <input type="text" name="e-mail" class="form__input" required>
-                <label for="birthdate">BIRTH DATE</label>
+                <label for="birthdate">Birth date</label>
                 <input type="text" name="birthdate" class="form__input" required>
-                <label for="password">CHOOSE YOUR PASSWORD</label>
+                <label for="password">Choose your pasword</label>
                 <input type="text" name="password" class="form__input" required>
                 <input type="checkbox" name="newsletter" value="newsletter" id="newsletter"><label for="newsletter">Send newsletters to my e-mail address</label>
                 <i class="fas fa-arrow-circle-right fa-4x" style="color: #E6B33E;"></i>
