--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -27,7 +27,7 @@
      <form action="submit.php" method="GET">
         <fieldset class="personal-information">
             <h1 class="h1-form">Personal information</h1>
-            <label for="fullname">Full name</label>
+            <label for="fullname" class="">Full name</label>
             <input type="text" name="fullname" class="form__input" required>
             <label for="e-mail">E-mail</label>
             <input type="text" name="e-mail" class="form__input" required>
@@ -35,7 +35,7 @@
             <input type="text" name="birthdate" class="form__input"required>
             <label for="password">Choose your password</label>
             <input type="text" name="password" class="form__input"required>
-            <input type="checkbox" name="newsletter" value="newsletter" id="newsletter"><label for="newsletter">Send newsletters to my e-mail address</label>
+            <input type="checkbox" name="newsletter" value="newsletter" id="newsletter"><p>Send newsletters to my e-mail address</p>
         </fieldset>
         <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
      </form>
