--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -35,7 +35,10 @@
             <input type="text" name="birthdate" class="form__input"required>
             <label for="password">Choose your password</label>
             <input type="text" name="password" class="form__input"required>
-            <input type="checkbox" name="newsletter" value="newsletter" id="newsletter"><p>Send newsletters to my e-mail address</p>
+            <div class="newsletter-section">
+            <input type="checkbox" name="newsletter" value="newsletter" id="newsletter">
+            <p>Send newsletters to my e-mail address</p>
+        </div>
         </fieldset>
         <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
      </form>
