--- a/Create-account-pro/create-account-pro2.html
+++ b/Create-account-pro/create-account-pro2.html
@@ -24,6 +24,13 @@
   </header>
 
     <main>
+        <div class="circle">
+            <i class="fas fa-circle"></i>
+            <div class="active-circle">
+                <i class="fas fa-circle"></i>
+            </div>
+            <i class="fas fa-circle"></i>
+        </div>
         <form action="submit.php" method="GET">
         <fieldset class="banking-details">
             <h1 class="h1-form">Banking details</h1>
