--- a/Create-account-watcher/create-account-watcher2.html
+++ b/Create-account-watcher/create-account-watcher2.html
@@ -24,6 +24,12 @@
   </header>
 
     <main>
+        <div class="circle">
+            <i class="fas fa-circle"></i>
+            <div class="active-circle">
+                <i class="fas fa-circle"></i>
+            </div>
+        </div>
         <form action="submit.php" method="GET">
         <fieldset class="credit card">
             <h1 class="h1-form">Register your credit card</h1>
