--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -24,11 +24,10 @@
   </header>
 
       <main>
-        
+        <div class="circle"></div>
             <div class="active-circle">
                 <i class="fas fa-circle"></i>
             </div>
-            <div class="circle">
             <i class="fas fa-circle"></i>
             <i class="fas fa-circle"></i>
         </div>
