--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -25,10 +25,10 @@
 
       <main>
         <div class="circle"></div>
-            <div class="active-circle">
+            
                 <i class="fas fa-circle"></i>
-            </div>
-            <i class="fas fa-circle"></i>
+            <div class="active-circle">
+            <i class="fas fa-circle"></i></div>
             <i class="fas fa-circle"></i>
         </div>
      <form action="submit.php" method="GET">
