--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -24,13 +24,12 @@
   </header>
 
       <main>
-        <div class="circle"></div>
-            
+        <div class="circle">  
                 <i class="fas fa-circle"></i>
+        </div>
             <div class="active-circle">
             <i class="fas fa-circle"></i></div>
             <i class="fas fa-circle"></i>
-        </div>
      <form action="submit.php" method="GET">
         <fieldset class="personal-information">
             <h1 class="h1-form">Personal information</h1>
