--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -24,6 +24,7 @@
   </header>
 
     <main>
+        <section class="circle-section">
         <div class="active-circle">
             <i class="fas fa-circle"></i>
         </div>
@@ -33,6 +34,7 @@
         <div class="circle">  
             <i class="fas fa-circle"></i>
         </div>
+        </section>
 
      <form action="submit.php" method="GET">
         <fieldset class="personal-information">
