--- a/Create-account-watcher/create-account-watcher2.html
+++ b/Create-account-watcher/create-account-watcher2.html
@@ -24,13 +24,15 @@
   </header>
 
     <main>
-        <div class="circle">  
-            <i class="fas fa-circle"></i>
-        </div>
-        <div class="active-circle">
-            <i class="fas fa-circle"></i>
-        </div>
-        
+        <section class="circle-section">
+            <div class="circle">  
+                <i class="fas fa-circle"></i>
+            </div>
+            <div class="active-circle">
+                <i class="fas fa-circle"></i>
+            </div>
+        </section>
+
         <form action="submit.php" method="GET">
         <fieldset class="credit card">
             <h1 class="h1-form">Register your credit card</h1>
