--- a/Create-account-pro/create-account-pro2.html
+++ b/Create-account-pro/create-account-pro2.html
@@ -24,6 +24,7 @@
   </header>
 
     <main>
+        <section class="cirrcle-section">
         <div class="circle">  
             <i class="fas fa-circle"></i>
         </div>
@@ -33,7 +34,8 @@
         <div class="circle">  
             <i class="fas fa-circle"></i>
         </div>
-        
+    </section>
+
         <form action="submit.php" method="GET">
         <fieldset class="banking-details">
             <h1 class="h1-form">Banking details</h1>
