--- a/Create-account-watcher/create-account-watcher1.html
+++ b/Create-account-watcher/create-account-watcher1.html
@@ -24,12 +24,14 @@
   </header>
 
     <main>
+        <section class="circle-section">
         <div class="circle">  
             <i class="fas fa-circle"></i>
         </div>
         <div class="active-circle">
             <i class="fas fa-circle"></i>
         </div>
+    </section>
 
         <form action="submit.php" method="GET">
             <fieldset class="personal-information">
