--- a/Create-account-pro/create-account-pro2.html
+++ b/Create-account-pro/create-account-pro2.html
@@ -24,7 +24,7 @@
   </header>
 
     <main>
-        <section class="cirrcle-section">
+        <section class="circle-section">
         <div class="circle">  
             <i class="fas fa-circle"></i>
         </div>
