--- a/Create-account-pro/create-account-pro2.html
+++ b/Create-account-pro/create-account-pro2.html
@@ -39,7 +39,7 @@
         <form action="submit.php" method="GET">
         <fieldset class="banking-details">
             <h1 class="h1-form">Banking details</h1>
-            <p>Everytime someone watches your work, you will get paid</p>
+            <p class="h1-subtext">Everytime someone watches your work, you will get paid</p>
             <label for="fullname">Full name</label>
             <input type="text" name="fullname" class="form__input" required>
             <label for="adress">Address</label>
