--- a/Create-account-pro/create-account-pro2.html
+++ b/Create-account-pro/create-account-pro2.html
@@ -40,20 +40,22 @@
         <fieldset class="banking-details">
             <h1 class="h1-form">Banking details</h1>
             <p class="h1-subtext">Everytime someone watches your work, you will get paid</p>
-            <label for="fullname">Full name</label>
-            <input type="text" name="fullname" class="form__input" required>
-            <label for="adress">Address</label>
-            <input type="text" name="address" class="form__input" required>
-            <label for="city">City</label><label for="zipcode">Zip code</label>
-            <input type="text" name="city" required><input type="text" name="zipcode" class="form__input" required>
-            <label for="country">Country</label>
-            <input type="text" name="country" class="form__input" required>
-            <label for="iban">Iban</label>
-            <input type="text" name="iban" class="form__input" required>
-            <label for="swift-bic">Swift / Bic</label>
-            <input type="text" name="swift-bic" class="form__input" required>
-            <label for="bankcode">Bankcode (US)</label>
-            <input type="text" name="bankcode" class="form__input">
+            <p><label for="fullname">Full name</label>
+            <input type="text" name="fullname" class="form__input" required></p>
+            <p><label for="adress">Address</label>
+            <input type="text" name="address" class="form__input" required></p>
+            <p><label for="city">City</label>
+            <input type="text" name="city" required></p>
+            <p><label for="zipcode">Zip code</label>
+            <input type="text" name="zipcode" class="form__input" required></p>
+            <p><label for="country">Country</label>
+            <input type="text" name="country" class="form__input" required></p>
+            <p><label for="iban">Iban</label>
+            <input type="text" name="iban" class="form__input" required></p>
+            <p><label for="swift-bic">Swift / Bic</label>
+            <input type="text" name="swift-bic" class="form__input" required></p>
+            <p><label for="bankcode">Bankcode (US)</label>
+            <input type="text" name="bankcode" class="form__input"></p>
          </fieldset>
          <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
         </form>
