--- a/Create-account-pro/create-account-pro2.html
+++ b/Create-account-pro/create-account-pro2.html
@@ -45,7 +45,7 @@
             <p><label for="adress">Address</label>
             <input type="text" name="address" class="form__input" required></p>
             <p><label for="city">City</label>
-            <input type="text" name="city" required></p>
+            <input type="text" name="city" class="form__input" required></p>
             <p><label for="zipcode">Zip code</label>
             <input type="text" name="zipcode" class="form__input" required></p>
             <p><label for="country">Country</label>
