--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -39,14 +39,14 @@
      <form action="submit.php" method="GET">
         <fieldset class="personal-information">
             <h1 class="h1-form">Personal information</h1>
-            <label for="fullname" class="">Full name</label>
-            <input type="text" name="fullname" class="form__input" required>
-            <label for="e-mail">E-mail</label>
-            <input type="text" name="e-mail" class="form__input" required>
-            <label for="birthdate">Birth date</label>
-            <input type="text" name="birthdate" class="form__input"required>
-            <label for="password">Choose your password</label>
-            <input type="text" name="password" class="form__input"required>
+            <p><label for="fullname" class="">Full name</label>
+            <input type="text" name="fullname" class="form__input" required></p>
+            <p><label for="e-mail">E-mail</label>
+            <input type="text" name="e-mail" class="form__input" required></p>
+            <p><label for="birthdate">Birth date</label>
+            <input type="text" name="birthdate" class="form__input"required></p>
+            <p><label for="password">Choose your password</label>
+            <input type="text" name="password" class="form__input"required></p>
             <div class="newsletter-section">
             <input type="checkbox" name="newsletter" value="newsletter" id="newsletter">
             <p>Send newsletters to my e-mail address</p>
