--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -48,7 +48,7 @@
             <p><label for="password">Choose your password</label>
             <input type="text" name="password" class="form__input"required></p>
             <div class="newsletter-section">
-            <input type="checkbox" name="newsletter" value="newsletter" id="newsletter">
+            <input type="checkbox" name="newsletter" value="newsletter" id="newsletter" class="newsletter">
             <p>Send newsletters to my e-mail address</p>
         </div>
         </fieldset>
