--- a/Create-account-pro/create-account-pro3.html
+++ b/Create-account-pro/create-account-pro3.html
@@ -35,19 +35,21 @@
             <i class="fas fa-circle"></i>
         </div>
         </section>
-        
+
         <form action="submit.php" method="GET">
         <fieldset class="credit-card">
+            <div class="grid-h1">
             <h1 class="h1-form">Register your credit card</h1>
             <p>*Optional - If your interested in watching other producers' films, you can add your creditcard infomation for easy payment.</p>
-            <label for="cardnumber">Cardnumber</label>
-            <input type="text" name="cardnumber" class="form__input">
-            <label for="cardholdername">Cardholder name</label>
-            <input type="text" name="cardholdername" class="form__input">
-            <label for="expiredate">Expire date</label>
-            <input type="text" name="expiredate" class="form__input">
-            <label for="cvv">CVV</label>
-            <input type="text" name="cvv" class="form__input">
+            </div>
+            <p><label for="cardnumber">Cardnumber</label>
+            <input type="text" name="cardnumber" class="form__input"></p>
+            <p><label for="cardholdername">Cardholder name</label>
+            <input type="text" name="cardholdername" class="form__input"></p>
+            <p><label for="expiredate">Expire date</label>
+            <input type="text" name="expiredate" class="form__input"></p>
+            <p><label for="cvv">CVV</label>
+            <input type="text" name="cvv" class="form__input"></p>
          </fieldset>
          <input type="submit" value="next">
          <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
