--- a/Create-account-pro/create-account-pro2.html
+++ b/Create-account-pro/create-account-pro2.html
@@ -40,7 +40,7 @@
         <fieldset class="banking-details">
             <div class="grid-h1">
             <h1 class="h1-form">Banking details</h1>
-            <p">Everytime someone watches your work, you will get paid</p>
+            <p>Everytime someone watches your work, you will get paid</p>
         </div>
             <p><label for="fullname">Full name</label>
             <input type="text" name="fullname" class="form__input" required></p>
