--- a/Create-account-pro/create-account-pro3.html
+++ b/Create-account-pro/create-account-pro3.html
@@ -40,7 +40,8 @@
         <fieldset class="credit-card">
             <div class="grid-h1">
             <h1 class="h1-form">Register your credit card</h1>
-            <p>*Optional - If your interested in watching other producers' films, you can add your creditcard infomation for easy payment.</p>
+            <p>*Optional - If your interested in watching other producers' films, </p>
+            <p> can add your creditcard infomation for easy payment.</p>
             </div>
             <p><label for="cardnumber">Cardnumber</label>
             <input type="text" name="cardnumber" class="form__input"></p>
@@ -51,7 +52,6 @@
             <p><label for="cvv">CVV</label>
             <input type="text" name="cvv" class="form__input"></p>
          </fieldset>
-         <input type="submit" value="next">
          <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
          </form>
     </body>
