--- a/Create-account-watcher/create-account-watcher1.html
+++ b/Create-account-watcher/create-account-watcher1.html
@@ -33,23 +33,24 @@
         </div>
     </section>
 
-        <form action="submit.php" method="GET">
-            <fieldset class="personal-information">
-                <h1 class="h1-form">Personal information</h1>
-                <label for="fullname">Full name</label>
-                <input type="text" name="fullname" class="form__input" required>
-                <label for="e-mail">E-mail</label>
-                <input type="text" name="e-mail" class="form__input" required>
-                <label for="birthdate">Birth date</label>
-                <input type="text" name="birthdate" class="form__input" required>
-                <label for="password">Choose your pasword</label>
-                <input type="text" name="password" class="form__input" required>
-                <input type="checkbox" name="newsletter" value="newsletter" id="newsletter"><label for="newsletter">Send newsletters to my e-mail address</label>
-                <i class="fas fa-arrow-circle-right fa-4x" style="color: #E6B33E;"></i>
-            </fieldset>
-            <input type="submit" value="next">
-        </form>
-             <a href="../create-account-pro/create-account-pro2.html">next</a>
+    <form action="submit.php" method="GET">
+        <fieldset class="personal-information">
+            <h1 class="h1-form">Personal information</h1>
+            <p><label for="fullname" class="">Full name</label>
+            <input type="text" name="fullname" class="form__input" required></p>
+            <p><label for="e-mail">E-mail</label>
+            <input type="text" name="e-mail" class="form__input" required></p>
+            <p><label for="birthdate">Birth date</label>
+            <input type="text" name="birthdate" class="form__input"required></p>
+            <p><label for="password">Choose your password</label>
+            <input type="text" name="password" class="form__input"required></p>
+            <div class="newsletter-section">
+            <input type="checkbox" name="newsletter" value="newsletter" id="newsletter" class="newsletter">
+            <p>Send newsletters to my e-mail address</p>
+        </div>
+        </fieldset>
+        <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
+     </form>
         </body>
     </main>
 
