--- a/Create-account-watcher/create-account-watcher2.html
+++ b/Create-account-watcher/create-account-watcher2.html
@@ -36,28 +36,35 @@
         <form action="submit.php" method="GET">
         <fieldset class="credit card">
             <h1 class="h1-form">Register your credit card</h1>
-            <p>* This step is optional. By adding this information you do not have to type your credit card information everytime you are going to watch a film.</p>
+            <p> </p>
             <label for="fullname">Full name</label>
             <input type="text" name="fullname" class="form__input">
             <label for="adress">Address</label>
             <input type="text" name="address" class="form__input">
             <label for="city">City</label><label for="zipcode">Zip code</label>
             <input type="text" name="city"><input type="text" name="zipcode" class="form__input">
-            <label for="country">Country</label>
-            <input type="text" name="country" class="form__input">
+            
 
-            <label for="cardnumber">Cardnumber</label>
-            <input type="text" name="cardnumber" class="form__input">
-            <label for="cardholdername">Cardholder name</label>
-            <input type="text" name="cardholdername" class="form__input">
-            <label for="expiredate">Expire date</label>
-            <input type="text" name="expiredate" class="form__input">
-            <label for="cvv">CVV</label>
-            <input type="text" name="cvv" class="form__input">
-         </fieldset>
-         <input type="submit" value="next">
-        </form>
-         <a href="../create-account-watcher/create-account-watcher3.html">Next</a>
+            <form action="submit.php" method="GET">
+                <fieldset class="credit-card">
+                    <div class="grid-h1">
+                    <h1 class="h1-form">Register your credit card</h1>
+                    <p>* This step is optional. By adding this information you do not have to</p>
+                    <p>type your credit card information everytime you are going to watch a film.</p>
+                    </div>
+                    <p><label for="cardnumber">Cardnumber</label>
+                    <input type="text" name="cardnumber" class="form__input"></p>
+                    <p><label for="cardholdername">Cardholder name</label>
+                    <input type="text" name="cardholdername" class="form__input"></p>
+                    <p><label for="expiredate">Expire date</label>
+                    <input type="text" name="expiredate" class="form__input"></p>
+                    <p><label for="cvv">CVV</label>
+                    <input type="text" name="cvv" class="form__input"></p>
+                    <p><label for="country">Country</label>
+                    <input type="text" name="country" class="form__input"></p>
+                 </fieldset>
+                 <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
+                 </form>
     </body>
     </main>
 
