--- a/Create-account-watcher/create-account-watcher3.html
+++ b/Create-account-watcher/create-account-watcher3.html
@@ -27,7 +27,7 @@
         <section class="success-section">
             <div class="check-icon-big"><i class="fas fa-check"></i></div>
             <h1>You successfully became a member</h1>
-               <button><a href="/account-watcher.html" class="button1">Go to account</a></button>
+               <button class="button1"><a href="/account-watcher.html"">Go to account</a></button>
           </section>
     </main>
 
