--- a/films.html
+++ b/films.html
@@ -38,42 +38,52 @@
         <p class="h1-subtext">Choose from a variety of high quality films</p>
       </section>
      
-
-        <div class="content-wrap">
-          <h2 class="films-h2">New Releases</h2>
+      <div class="films-grid">
+      <section class="new-releases-section">
+      <div class="content-wrap">
+        <h2 class="films-h2">New Releases</h2>
+        <div class="new-releases">
           <i class="fas fa-chevron-left"style="font-size: 110px;color: #A27201;"></i><a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
           <i class="fas fa-chevron-right"></i>
         </div>
+      </div>
       </section>
 
+      <section class="drama-section"> 
       <div class="content-wrap">
       <h2 class="films-h2">Drama</h2>
-      <section class="drama">        
+        <div class="drama">    
         <a href="watch1.html"><img src="images/film1.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film2.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
-      </section>
+        </div>
       </div>
+      </section>
 
-      <div class="content-wrap">
+      <section class="documentary-section">
+        <div class="content-wrap">
       <h2 class="films-h2">Dokumentary</h2>
-      <section class="documentary">        
+          <div class="documentary">
         <a href="watch1.html"><img src="images/film5.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film6.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film8.jpg" alt="Film Title by Producer-name" class="film"></a>
-      </section>
       </div>
+        </div>
+      </section>
        
+      <section class="action-section">
       <div class="content-wrap">
       <h2 class="films-h2">Action</h2>
-      <section class="action">   
+      <div class="action">   
           <a href="watch1.html"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
           <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
           <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
           <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
-      </section>
+      </div>
+      </div>
+        </section>
       </div>
     </main>
 
