--- a/films.html
+++ b/films.html
@@ -43,11 +43,28 @@
       <div class="content-wrap">
         <h2 class="films-h2">New Releases</h2>
         <div class="new-releases">
-          <i class="fas fa-chevron-left"style="font-size: 110px;color: #A27201;"></i><a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
-          <i class="fas fa-chevron-right"></i>
+          <div class="arrow-icon">
+            <i class="fas fa-chevron-left"></i></div>
+          <a href="watch1.html">
+            <img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
+          <div class="arrow-icon">
+            <i class="fas fa-chevron-right"></i>
+            </div>
         </div>
       </div>
       </section>
+      
+      <section class="circle-section">
+        <div class="active-circle">
+            <i class="fas fa-circle"></i>
+        </div>
+        <div class="circle">  
+            <i class="fas fa-circle"></i>
+        </div>
+        <div class="circle">  
+            <i class="fas fa-circle"></i>
+        </div>
+        </section>
 
       <section class="drama-section"> 
       <div class="content-wrap">
