--- a/films.html
+++ b/films.html
@@ -44,7 +44,8 @@
         <h2 class="films-h2">New Releases</h2>
         <div class="new-releases">
           <div class="arrow-icon">
-            <i class="fas fa-chevron-left"></i></div>
+            <i class="fas fa-chevron-left"></i>
+          </div>
           <a href="watch1.html">
             <img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
           <div class="arrow-icon">
@@ -69,12 +70,18 @@
       <section class="drama-section"> 
       <div class="content-wrap">
       <h2 class="films-h2">Drama</h2>
-        <div class="drama">    
+        <div class="drama">
+          <div class="arrow-icon">
+            <i class="fas fa-chevron-left"></i>
+          </div>  
         <a href="watch1.html"><img src="images/film1.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film2.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
-        </div>
+        <div class="arrow-icon">
+          <i class="fas fa-chevron-right"></i>
+          </div>
+      </div>
       </div>
       </section>
 
@@ -82,10 +89,16 @@
         <div class="content-wrap">
       <h2 class="films-h2">Dokumentary</h2>
           <div class="documentary">
+            <div class="arrow-icon">
+              <i class="fas fa-chevron-left"></i>
+            </div>
         <a href="watch1.html"><img src="images/film5.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film6.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
         <a href="watch1.html"><img src="images/film8.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <div class="arrow-icon">
+          <i class="fas fa-chevron-right"></i>
+          </div>
       </div>
         </div>
       </section>
@@ -93,12 +106,18 @@
       <section class="action-section">
       <div class="content-wrap">
       <h2 class="films-h2">Action</h2>
-      <div class="action">   
+      <div class="action">
+        <div class="arrow-icon">
+          <i class="fas fa-chevron-left"></i>
+        </div>
           <a href="watch1.html"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
           <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
           <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
           <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
-      </div>
+          <div class="arrow-icon">
+            <i class="fas fa-chevron-right"></i>
+            </div>
+        </div>
       </div>
         </section>
       </div>
