--- a/producer-profile.html
+++ b/producer-profile.html
@@ -50,13 +50,13 @@
   ></a>
 
       <section>
-        <img src="images/producer1.jpg" alt="Profile picture" class="profile-picture">
+        <img src="images/producer1.jpg" alt="Profile picture" class="producer">
         <h1>Name Surname</h1>
          <p>Lorem ipsum dolor sit amet, consectetur adipisifwcing elit, sed do eiusmod tempor incididunt ut.</p>
       </section>
 
       <section>
-        <img src="images/film1-big.jpg" alt="">
+        <img src="images/film1-big.jpg" alt="Film title">
         <h2>Film title</h2>
         <h3>From: Producer name</h3>
         <p>Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe liatque porepera dolorporum que del et est et que et anis cum nos volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem. </p>
@@ -65,7 +65,7 @@
       </section>
 
       <section>
-        <img src="images/film3-big.jpg" alt="">
+        <img src="images/film3-big.jpg" alt="Film title">
         <h2>Film title</h2>
         <h3>From: Producer name</h3>
         <p>Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe liatque porepera dolorporum que del et est et que et anis cum nos volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem. </p>
