--- a/producer-profile.html
+++ b/producer-profile.html
@@ -49,13 +49,14 @@
   ><i class="fas fa-chevron-left" style="font-size: 30px"></i
   ></a>
 
-      <section>
-        <img src="images/producer1.jpg" alt="Profile picture" class="producer">
+  <div class="producer-profile-grid">
+      <section class="producer-section">
+        <img src="images/producer1.jpg" alt="Profile picture" class="profile-picture">
         <h1>Name Surname</h1>
          <p>Lorem ipsum dolor sit amet, consectetur adipisifwcing elit, sed do eiusmod tempor incididunt ut.</p>
       </section>
 
-      <section>
+      <section class="film-section">
         <img src="images/film1-big.jpg" alt="Film title">
         <h2>Film title</h2>
         <h3>From: Producer name</h3>
@@ -64,7 +65,7 @@
         <p>volore voluptas eum solo optatquam, aut fuga. Fuga. Hendit maxim hitatibus</p>
       </section>
 
-      <section>
+      <section class="film-section">
         <img src="images/film3-big.jpg" alt="Film title">
         <h2>Film title</h2>
         <h3>From: Producer name</h3>
@@ -72,6 +73,7 @@
         <p>Ita quia cori dolore plicide pore con ni ommolorrum quae optatent quam dolorum facea sequam nam facipsum quo bearchi citiunt esendae vel minus sunt, nit eatqui num estiisi nctios por mi, que</p> 
         <p>volore voluptas eum solo optatquam, aut fuga. Fuga. Hendit maxim hitatibus</p>
       </section>
+  </div>
    
     <footer>
 
