--- a/producer-profile.html
+++ b/producer-profile.html
@@ -57,7 +57,7 @@
       </section>
 
       <section class="film-section">
-        <img src="images/film1-big.jpg" alt="Film title">
+        <img src="images/film1-big.jpg" alt="Film title" class="film-big">
         <h2>Film title</h2>
         <h3>From: Producer name</h3>
         <p>Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe liatque porepera dolorporum que del et est et que et anis cum nos volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem. </p>
@@ -66,7 +66,7 @@
       </section>
 
       <section class="film-section">
-        <img src="images/film3-big.jpg" alt="Film title">
+        <img src="images/film3-big.jpg" alt="Film title" class="film-big">
         <h2>Film title</h2>
         <h3>From: Producer name</h3>
         <p>Nequi omnit quasit eost aut fugit ut estium susam fuga. Ficaepe liatque porepera dolorporum que del et est et que et anis cum nos volorpor aut a doluptatem dolupta temqui aut demolup tibuscitem. </p>
