--- a/account-producer.html
+++ b/account-producer.html
@@ -45,16 +45,16 @@
       </ul>
     </nav>
 
-  <a href="producers.html"
-  ><i class="fas fa-chevron-left" style="font-size: 30px"></i
-  ></a>
+  <a href="index.html">
+      <div class="back-icon">
+          <i class="fas fa-chevron-left"></i></a></div>
 
   <section class="manage-buttons">
-    <a href="producer-profile.html" class="button2">
+    <a href="manage-account/manage-account-pro.html" class="button2">
         <div class="button2-icon">
             <i class="fas fa-cog"></i>
-        </div>Manage account</a>
-    <a href="producer-profile.html" class="button2">
+        </div>Manage profile</a>
+    <a href="manage-account/manage-bankdetails-pro.html" class="button2">
             <div class="button2-icon">
                 <i class="far fa-credit-card"></i>
         </div>Bank settings</a>
