--- a/producer-profile.html
+++ b/producer-profile.html
@@ -45,9 +45,9 @@
       </ul>
     </nav>
 
-  <a href="producers.html"
-  ><i class="fas fa-chevron-left" style="font-size: 30px"></i
-  ></a>
+    <a href="producers.html">
+      <div class="back-icon">
+          <i class="fas fa-chevron-left"></i></a></div>
 
   <div class="producer-profile-grid">
       <section class="producer-section">
