--- a/search.html
+++ b/search.html
@@ -27,9 +27,9 @@
   </head>
 
   <body>
-    <a href="index.html"
-      ><i class="fas fa-chevron-left" style="font-size: 30px"></i
-    ></a>
+    <a href="index.html">
+        <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
+    ></a></div>
 
     <div class="popup-section">
       <main>
