--- a/manage-account/manage-account-pro.html
+++ b/manage-account/manage-account-pro.html
@@ -20,7 +20,7 @@
       content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/styles/styles.css" rel="stylesheet" />
+    <link href="../styles/styles.css" rel="stylesheet" />
   </head>
 
   <body>
