--- a/manage-account/manage-account-pro.html
+++ b/manage-account/manage-account-pro.html
@@ -47,7 +47,7 @@
 
   <div class="producer-profile-grid">
       <section class="producer-section">
-        <img src="images/blank-profile-picture.jpg" alt="Profile picture" class="profile-picture">
+        <img src="../images/blank-profile-picture.jpg" alt="Profile picture" class="profile-picture">
         <div class="button2">
             <div class="button2-icon">
                 <i class="fas fa-upload"></i>
