--- a/manage-account/manage-account-pro.html
+++ b/manage-account/manage-account-pro.html
@@ -60,23 +60,23 @@
       </section>
 
       <section class="film-section">
-    <div class="button2">
-            <div class="button2-icon">
-                <i class="fas fa-upload"></i>
-        </div>Upload film</div>
         <div class="button2">
             <div class="button2-icon">
                 <i class="fas fa-upload"></i>
-        </div>Upload film picture</div>
+            </div>Upload film</div>
+        <div class="button2">
+            <div class="button2-icon">
+                <i class="fas fa-upload"></i>
+            </div>Upload film picture</div>
         <p><label for="film-title">Film title</label>
             <input type="text" name="film-title" class="form__input"></p>
-            <label for="film-description" class="description">Description</label>
+        <p><label for="film-description" class="description">Description</label>
             <textarea class="form__input" name="film-description" rows="5" cols="30"></textarea>
-            <p><label for="tags">Tags</label>
-                <input type="text" name="tags" placeholder="Catogory etc.." class="form__input"></p>
+        <p><label for="tags">Tags</label>
+            <input type="text" name="tags" placeholder="Catogory etc.." class="form__input"></p>
       </section>
 
-      <div class="button1"><a href="/account-producer.html">Save changes</a></div>
+      <a href="/account-producer.html"><div class="button1">Save changes</a></div>
   </div>
    
     <footer>
