--- a/manage-account/manage-account-pro.html
+++ b/manage-account/manage-account-pro.html
@@ -60,6 +60,7 @@
       </section>
 
       <section class="film-section">
+        <div class="manage-film-section">
         <div class="button2">
             <div class="button2-icon">
                 <i class="fas fa-upload"></i>
@@ -71,9 +72,10 @@
         <p><label for="film-title">Film title</label>
             <input type="text" name="film-title" class="form__input"></p>
         <p><label for="film-description" class="description">Description</label>
-            <textarea class="form__input" name="film-description" rows="5" cols="30"></textarea>
+            <textarea class="form__input" name="film-description" rows="5" cols="30"></textarea></p>
         <p><label for="tags">Tags</label>
             <input type="text" name="tags" placeholder="Catogory etc.." class="form__input"></p>
+        </div>  
       </section>
 
       <a href="/account-producer.html"><div class="button1">Save changes</a></div>
