--- a/manage-account/manage-account-pro.html
+++ b/manage-account/manage-account-pro.html
@@ -78,7 +78,7 @@
         </div>  
       </section>
 
-      <a href="/account-producer.html"><div class="button1">Save changes</a></div>
+      <a href="/account-producer.html" class="button1">Save changes</a>
   </div>
    
     <footer>
