--- a/manage-account/manage-account-pro.html
+++ b/manage-account/manage-account-pro.html
@@ -48,10 +48,11 @@
   <div class="producer-profile-grid">
       <section class="producer-section">
         <img src="../images/blank-profile-picture.jpg" alt="Profile picture" class="profile-picture">
+        <div class="upload-profile-picture-button">
         <div class="button2">
             <div class="button2-icon">
                 <i class="fas fa-upload"></i>
-        </div>Upload profile picture</div>
+        </div>Upload profile picture</div></div>
         <h1>Name Surname</h1>
         <form>
         <label for="producer-description" class="description">Description</label>
