--- a/manage-account/manage-account-pro.html
+++ b/manage-account/manage-account-pro.html
@@ -26,11 +26,11 @@
   <body>
     <header>
       <div class="content-wrap">
-        <a href="index.html"><img src="../images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
+        <a href="/index.html"><img src="../images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
           <nav class="right-nav">
            <ul>
-            <a href="login.html">Sign in</a>
-            <a href="search.html"><i class="fas fa-search"></i></a>
+            <a href="/login.html"><i class="fas fa-user-circle"></i></a>
+            <a href="/search.html"><i class="fas fa-search"></i></a>
           </ul>
           </nav>
       </div>
@@ -39,9 +39,9 @@
   <main>
     <nav class="navbar">
       <ul style="margin-left: 59px;">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="films.html">Films</a></li>
-        <li><a href="producers.html" class="active">Producers</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/films.html">Films</a></li>
+        <li><a href="/producers.html">Producers</a></li>
       </ul>
     </nav>
 
@@ -56,7 +56,7 @@
         <h1>Name Surname</h1>
         <form>
         <label for="producer-description" class="description">Description</label>
-            <textarea class="form__input" name="producer-description" rows="5" cols="30"></textarea>
+            <textarea class="form__input" name="producer-description" rows="5" cols="50"></textarea>
         </form>
       </section>
 
@@ -73,7 +73,7 @@
         <p><label for="film-title">Film title</label>
             <input type="text" name="film-title" class="form__input"></p>
         <p><label for="film-description" class="description">Description</label>
-            <textarea class="form__input" name="film-description" rows="5" cols="30"></textarea></p>
+            <textarea class="form__input" name="film-description" rows="5" cols="50"></textarea></p>
         <p><label for="tags">Tags</label>
             <input type="text" name="tags" placeholder="Catogory etc.." class="form__input"></p>
         </div>  
