--- a/account-producer.html
+++ b/account-producer.html
@@ -29,8 +29,8 @@
         <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
           <nav class="right-nav">
            <ul>
-            <a href="login.html">Sign in</a>
-            <a href="search.html"><i class="fas fa-search"></i></a>
+            <a href="/account-producer.html" class="active-icon"><i class="fas fa-user-circle"></i></a>
+            <a href="/search.html"><i class="fas fa-search"></i></a>
           </ul>
           </nav>
       </div>
@@ -41,7 +41,7 @@
       <ul style="margin-left: 59px;">
         <li><a href="index.html">Home</a></li>
         <li><a href="films.html">Films</a></li>
-        <li><a href="producers.html" class="active">Producers</a></li>
+        <li><a href="producers.html">Producers</a></li>
       </ul>
     </nav>
 
