--- a/manage-account/manage-bankdetails-pro.html
+++ b/manage-account/manage-bankdetails-pro.html
@@ -23,24 +23,10 @@
     </div>
   </header>
 
-    <main>
-        <section class="circle-section">
-        <div class="circle">  
-            <i class="fas fa-circle"></i>
-        </div>
-        <div class="active-circle">
-            <i class="fas fa-circle"></i>
-        </div>
-        <div class="circle">  
-            <i class="fas fa-circle"></i>
-        </div>
-    </section>
-
         <form action="submit.php" method="GET">
         <fieldset class="banking-details">
             <div class="grid-h1">
             <h1 class="h1-form">Banking details</h1>
-            <p>Everytime someone watches your work, you will get paid</p>
         </div>
             <p><label for="fullname">Full name</label>
             <input type="text" name="fullname" class="form__input" required></p>
@@ -62,7 +48,7 @@
          <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
         </form>
 
-         <a href="../create-account-pro/create-account-pro3.html">Next</a>
+        <div class="save-changes-button"><a href="/account-producer.html" class="button1">Save changes</a></div>
     </main>
 
     <footer>
