--- a/manage-account/manage-account-pro.html
+++ b/manage-account/manage-account-pro.html
@@ -24,26 +24,17 @@
   </head>
 
   <body>
-    <header>
-      <div class="content-wrap">
-        <a href="/index.html"><img src="../images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
-          <nav class="right-nav">
-           <ul>
-            <a href="/login.html"><i class="fas fa-user-circle"></i></a>
-            <a href="/search.html"><i class="fas fa-search"></i></a>
-          </ul>
-          </nav>
-      </div>
- </header>
-
-  <main>
-    <nav class="navbar">
-      <ul style="margin-left: 59px;">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/films.html">Films</a></li>
-        <li><a href="/producers.html">Producers</a></li>
-      </ul>
-    </nav>
+    <body>
+        <header class="small-header">
+          <div class="small-header-wrap">
+            <a href="/index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+              <nav class="right-nav">
+               <ul>
+                <a href="/index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+              </ul>
+              </nav>
+        </div>
+      </header>
 
   <div class="producer-profile-grid">
       <section class="producer-section">
