--- a/manage-account/manage-carddetials-watcher.html
+++ b/manage-account/manage-carddetials-watcher.html
@@ -24,21 +24,10 @@
   </header>
 
     <main>
-        <section class="circle-section">
-            <div class="circle">  
-                <i class="fas fa-circle"></i>
-            </div>
-            <div class="active-circle">
-                <i class="fas fa-circle"></i>
-            </div>
-        </section>
-
             <form action="submit.php" method="GET">
                 <fieldset class="credit-card">
                     <div class="grid-h1">
-                    <h1 class="h1-form">Register your credit card</h1>
-                    <p>* This step is optional. By adding this information you do not have to</p>
-                    <p>type your credit card information everytime you are going to watch a film.</p>
+                    <h1 class="h1-form">Payment settings</h1>
                     </div>
                     <p><label for="cardnumber">Cardnumber</label>
                     <input type="text" name="cardnumber" class="form__input"></p>
@@ -50,9 +39,9 @@
                     <input type="text" name="cvv" class="form__input"></p>
                     <p><label for="country">Country</label>
                     <input type="text" name="country" class="form__input"></p>
-                 </fieldset>
-                 <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
+                 </fieldset>              
                  </form>
+                 <div class="save-changes-button"><a href="/account-watcher.html" class="button1">Save changes</a></div>
     </body>
     </main>
 
