--- a/manage-account/manage-personaldetailes-watcher.html
+++ b/manage-account/manage-personaldetailes-watcher.html
@@ -36,7 +36,7 @@
 
     <form action="submit.php" method="GET">
         <fieldset class="personal-information">
-            <h1 class="h1-form">Personal information</h1>
+            <h1 class="h1-form">Personal details</h1>
             <p><label for="fullname" class="">Full name</label>
             <input type="text" name="fullname" class="form__input" required></p>
             <p><label for="e-mail">E-mail</label>
@@ -50,8 +50,8 @@
             <p>Send newsletters to my e-mail address</p>
         </div>
         </fieldset>
-        <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
      </form>
+     <div class="save-changes-button"><a href="/account-watcher.html" class="button1">Save changes</a></div>
         </body>
     </main>
 
