--- a/search-results.html
+++ b/search-results.html
@@ -30,7 +30,7 @@
           <nav class="right-nav">
            <ul>
             <a href="login.html">Sign in</a>
-            <a href="search.html"><i class="fas fa-search"></i></a>
+            <a href="search.html" class="active-icon"><i class="fas fa-search"></i></a>
           </ul>
           </nav>
       </div>
@@ -41,7 +41,7 @@
     <ul style="margin-left: 59px;">
       <li><a href="index.html">Home</a></li>
       <li><a href="films.html">Films</a></li>
-      <li><a href="producers.html" class="active">Producers</a></li>
+      <li><a href="producers.html">Producers</a></li>
     </ul>
   </nav>
          <section class="heading-content">
