--- a/account-producer.html
+++ b/account-producer.html
@@ -26,7 +26,7 @@
   <body>
     <header>
       <div class="content-wrap">
-        <a href="index.html"><img src="/images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
+        <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
           <nav class="right-nav">
            <ul>
             <a href="/account-producer.html" class="active-icon"><i class="fas fa-user-circle"></i></a>
