--- a/Create-account-watcher/create-account-watcher3.html
+++ b/Create-account-watcher/create-account-watcher3.html
@@ -14,10 +14,10 @@
   <body>
     <header class="small-header">
       <div class="small-header-wrap">
-        <a href="/index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+        <a href="../index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
           <nav class="right-nav">
            <ul>
-            <a href="/index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+            <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
           </ul>
           </nav>
     </div>
@@ -27,7 +27,7 @@
         <section class="success-section">
             <div class="check-icon-big"><i class="fas fa-check"></i></div>
             <h1>You successfully became a member</h1>
-               <div><a href="/account-watcher.html" class="button1">Go to account</a></div>
+               <div><a href="../account-watcher.html" class="button1">Go to account</a></div>
           </section>
     </main>
 
