--- a/manage-account/manage-bankdetails-pro.html
+++ b/manage-account/manage-bankdetails-pro.html
@@ -17,7 +17,7 @@
         <a href="../index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
           <nav class="right-nav">
            <ul>
-            <a href="/index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+            <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
           </ul>
           </nav>
     </div>
@@ -47,7 +47,7 @@
          </fieldset>
         </form>
 
-        <div class="save-changes-button"><a href="/account-producer.html" class="button1">Save changes</a></div>
+        <div class="save-changes-button"><a href="../account-producer.html" class="button1">Save changes</a></div>
     </main>
 
     <footer>
