--- a/manage-account/manage-account-pro.html
+++ b/manage-account/manage-account-pro.html
@@ -27,10 +27,10 @@
     <body>
         <header class="small-header">
           <div class="small-header-wrap">
-            <a href="/index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+            <a href="../index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
               <nav class="right-nav">
                <ul>
-                <a href="/index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+                <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
               </ul>
               </nav>
         </div>
@@ -70,7 +70,7 @@
         </div>  
       </section>
 
-      <div class="save-changes-button"><a href="/account-producer.html" class="button1">Save changes</a></div>
+      <div class="save-changes-button"><a href="../account-producer.html" class="button1">Save changes</a></div>
   </div>
    
     <footer>
