--- a/manage-account/manage-carddetials-watcher.html
+++ b/manage-account/manage-carddetials-watcher.html
@@ -14,10 +14,10 @@
   <body>
     <header class="small-header">
       <div class="small-header-wrap">
-        <a href="/index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+        <a href="../index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
           <nav class="right-nav">
            <ul>
-            <a href="/index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+            <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
           </ul>
           </nav>
     </div>
@@ -41,7 +41,7 @@
                     <input type="text" name="country" class="form__input"></p>
                  </fieldset>              
                  </form>
-                 <div class="save-changes-button"><a href="/account-watcher.html" class="button1">Save changes</a></div>
+                 <div class="save-changes-button"><a href="../account-watcher.html" class="button1">Save changes</a></div>
     </body>
     </main>
 
