--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -52,7 +52,7 @@
             <p>Send newsletters to my e-mail address</p>
         </div>
         </fieldset>
-        <button type="submit" class="arrow-button"><i class="fas fa-arrow-circle-right"></i></button>
+        <button class="arrow-button"><a href="./create-account-pro2.html"><i class="fas fa-arrow-circle-right"></i></a></button>
      </form>
     
     </body>
