--- a/Create-account-pro/create-account-pro4.html
+++ b/Create-account-pro/create-account-pro4.html
@@ -24,10 +24,10 @@
   </header>
 
     <main>
-        <section>
-            <i class="fas fa-check"></i>
+        <section class="success-section">
+            <div class="check-icon-big"><i class="fas fa-check"></i></div>
             <h1>You successfully became a member</h1>
-               <a href="../manage-account/manage-account-pro.html">Go to account</a>
+               <div><a href="../account-producer.html" class="button1">Go to account</a></div>
           </section>
     </main>
 
