--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@
    
     <footer>
       <div class="content-wrap">
-
+          <div class="small-header-wrap">
+            <a href="index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a>
+                <a href="index.html">Home</a>
+                <a href="films.html">Films</a>
+                <a href="producers.html">Producers</a>
+                <a href="search.html">Search</a>
+                <a href="index.html"><i class="fas fa-arrow-up"></i></a>
+        </div>
       </div>
     </footer>
   </body>
