--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@
    
     <footer>
       <div class="content-wrap">
-            <a href="index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a>
-                <a href="index.html">Home</a>
-                <a href="films.html">Films</a>
-                <a href="producers.html">Producers</a>
-                <a href="search.html">Search</a>
-                <a href="index.html"><i class="fas fa-arrow-up"></i></a>
+            
+        <li><a href="index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a></li>
+           
+          <li><a href="index.html">Home</a></li>
+            <li><a href="films.html">Films</a></li>
+              <li><a href="producers.html">Producers</a></li>
+                <li><a href="search.html">Search</a></li>
+                  <li><a href="index.html"><i class="fas fa-arrow-up"></i></a></li>
         </div>
     </footer>
   </body>
