--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
     <footer>
       <div class="content-wrap">
             
-        <a href="index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a>
-         <ul>
+        <section><a href="index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a></section>
+         <section><ul>
           <li><a href="index.html">Home</a></li>
             <li><a href="films.html">Films</a></li>
               <li><a href="producers.html">Producers</a></li>
                 <li><a href="search.html">Search</a></li>
-              </ul>  
-                  <a href="index.html"><i class="fas fa-arrow-up"></i></a>
+              </ul></section>
+                  <section><a href="index.html"><i class="fas fa-arrow-up"></i></a></section>
         </div>
     </footer>
   </body>
